--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/assets/basscss.css">
   <link rel="stylesheet" href="/assets/site.css">
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="icon" href="">
   <link rel="/docs/apple-touch-icon-precomposed" href="">
@@ -18,5 +17,18 @@
 
   {{ content }}
 
+　<script>
+  　WebFontConfig = { google: { families: 'Montserrat:400', 'Montserrat:700' } };
+
+  　(function() {
+    　var wf = document.createElement('script');
+    　wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      　        '://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js';
+    　wf.type = 'text/javascript';
+    　wf.async = 'true';
+    　var s = document.getElementsByTagName('script')[0];
+    　s.parentNode.insertBefore(wf, s);
+  　})();
+　</script>
 </body>
 </html>
