--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
 
   {{ content }}
 
-  <script>
-    WebFontConfig = { google: { families: 'Montserrat:400', 'Montserrat:700' } };
+  <script type="text/javascript">
+    WebFontConfig = { google: { families: [ 'Montserrat:400', 'Montserrat:700' ] } };
 
     (function() {
       var wf = document.createElement('script');
