--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="keywords" content="toiee cafe,toiee,教育,アクセラメンツ,講座">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/basscss.css">
-  <link rel="stylesheet" href="/assets/site.css">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/basscss.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/site.css">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.2/css/font-awesome.min.css" rel="stylesheet">
   <link rel="icon" href="">
   <link rel="/docs/apple-touch-icon-precomposed" href="">
 </head>
